# python-byd

./: README.md  example.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
BYDHVS/: __init__.py
BYDHVS1/: __init__.py
byd/: __init__.py
bydhvs/: __init__.py
