[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]>=6.0",
]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "bydhvs"
dynamic = [
  "version",
]
description = "A module for communicating with the BYD HVS Battery system"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "GPL-3.0" }
authors = [
  {name = "bbr111", email = "ben1@gmx.net"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities"
]

[tool.setuptools_scm]

[project.urls]
HomePage = "https://github.com/bbr111/python-bydhvs"
DOWNLOAD = "https://github.com/bbr111/python-bydhvs/releases"

[tool.setuptools.packages.find]
where = ["."]
